	* src/ibin.cpp: update bin::write to match the other variants of
	the function write
	* examples/tcapi.c: move declarations to the beginning of code
	blocks to address the complaints from Visual Studio
	* win/*.vcproj, win/*.mak: update project files to invlude
	blob.cpp, bordm.cpp and iskive.cpp, change Debug build of the
	solution to use Debug option of each VC project

2012-09-16 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: read dictionary again after recreating the
	columns from meta tags
	* src/i*.cpp: in the function write, all the indexes to be written
	to the file with the same names as long as the file is not mapped
	(address the problems with merging dictionaries of categorical
	values reported by Andrew Olson)

2012-09-15 John Wu <John dot Wu at ACM dot org>
	* src/parti.cpp: allow meta tags in ibis::part::reorder (passes
	test case 13 of check-ibis after adding the meta tags to test data
	sets in t2)

2012-09-14 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: stringSearch function involving multiple
	strings use strcmp/stricmp incorrectly, which caused the problem
	reported by Michael Chong
	* tests/Makefile.am: modify the test case 1 of check-text to use a
	list of 10 strings on column b (a text column) to repeat the test
	case used by Michael Chong
	* src/category.cpp: in function category::prepareMembers, add a
	if-block in case of losing index for a meta tag column

2012-09-13 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: change setDictionary and prepareMembers to
	make sure idx is no nil
	* src/part.cpp:1606 comment out the block - by merging the
	dictionaries for categorical values, getNumKeys can return values
	larger than 1

2012-09-11 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: change back the tests for leading and trailing
	spaces to use the function isspace instead of isgraph based on the
	suggestion from Gaurav Agarwal
	* src/colValue.cpp: in function ibis::colValues::create generate